infra/kubernetes/minio/minio-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-svc
spec:
  ports:
   - protocol: TCP
     port: 9433
  selector:
    app: console
  type: ClusterIP
