infra/kubernetes/minio/operator-ingress.yaml
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: minio-ingress
    namespace: minio-operator
    annotations:
      ingress.class: "haproxy"
      cert-manager.io/cluster-issuer: letsencrypt-tcc-prd
  spec:
    rules:
    - host: operator.magaiver.dev
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
               name: console
               port: 
                 number: 9090

    tls:
    - hosts:
      - "operator.magaiver.dev"
      secretName: "operator-conversao-tls"
